# MLOps

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
src/: builder.py  inference.py  main.py
src/config/: .env  db_settings.py  features.yaml  features_settings.py  logger_settings.py  model_settings.py
src/data/: rent_apartments.csv
src/databases/: db.sqlite  db_model.py
src/model/: model_builder.py  model_inference.py  model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
src/notebooks/: experimento.ipynb
