[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Jorge Robledo <robledo.11@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.36"
flake8 = "^7.1.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
